revised interactive icon spacing bug

--- a/CSS/responsive.scss
+++ b/CSS/responsive.scss
@@ -159,6 +159,10 @@ article {
 	margin-left: 0;
 }
 
+.interact {
+	margin: 0 0 1em 0;
+}
+
 /***aside***/
 aside {
 	width: 25%;
