--- a/CSS/style.css
+++ b/CSS/style.css
@@ -545,6 +545,9 @@ footer {
     margin-right: 0;
     margin-left: 0; }
 
+  .interact {
+    margin: 0 0 1em 0; }
+
   /***aside***/
   aside {
     width: 25%;
